// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThemeProvider /> snapshot should match snapshot 1`] = `
<ThemeProvider
  theme="darkWebex"
>
  <ThemeProvider
    className="md-theme-darkWebex mds-typography"
    themeclass="mds-theme-stable-darkWebex"
  >
    <mdc-themeprovider
      class="md-theme-darkWebex mds-typography"
      suppressHydrationWarning={true}
    >
      <div
        className="md-theme-provider-wrapper md-theme-provider-globals"
      />
    </mdc-themeprovider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`<ThemeProvider /> snapshot should match snapshot with style 1`] = `
<ThemeProvider
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ThemeProvider
    className="md-theme-darkWebex mds-typography"
    themeclass="mds-theme-stable-darkWebex"
  >
    <mdc-themeprovider
      class="md-theme-darkWebex mds-typography"
      suppressHydrationWarning={true}
    >
      <div
        className="md-theme-provider-wrapper md-theme-provider-globals"
        style={
          Object {
            "color": "pink",
          }
        }
      />
    </mdc-themeprovider>
  </ThemeProvider>
</ThemeProvider>
`;
